@@ -160,7 +160,7 @@ public class ClientContactService {
         try {
             repository.saveAll(entities);
         } catch (RuntimeException e) {
-            String errorMessage = String.format("Failed to save contact for employee [%s]", entities.get(0).getClient().getId());
+            String errorMessage = String.format("Failed to save contact for employee [%s]", entities.getFirst().getClient().getId());
             throw new LnFException(errorMessage);
         }
     }
